# ai-model-test

./: .gitignore  Dockerfile  README.md  compose.yml  pgvector.Dockerfile  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml
app/: config.py  main.py
app/antropic_bedrock/: router.py
app/azure_openai/: router.py
app/bedrock/: router.py
app/chat_history/: router.py
app/common/: s3.py  sql_engine.py
app/data_ingestion/: router.py
app/health/: router.py
app/langchain_azure_openai/: router.py
app/langchain_bedrock/: router.py
app/langchain_simple_rag_chat/: router.py
app/langgraph_rag_chat/: router.py
app/llm/: router.py
app/utils/: anthropic_client.py  azure_openai_client.py  azure_openai_embedding_client.py  bedrock_client.py  bedrock_embedding_client.py  langchain_azure_openai_client.py  langchain_bedrock_client.py  langchain_simple_rag_chat.py  langgraph_rag_chat.py  openai_embeddings_client.py  vectorstore_client.py
changelog/: db.changelog-2.0.xml  db.changelog-3.0.xml  db.changelog.xml
compose/: aws.env  start-localstack.sh
migrator/: Dockerfile  run-setup.sh
