[project]
name = "ai-model-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "asgi-logger>=0.1.0",
    "aws-embedded-metrics>=3.3.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.6",
    "dnspython>=2.7.0",
    "ecs-logging==2",
    "fastapi==0.111.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.24",
    "langchain-aws>=0.2.22",
    "langchain-azure-ai>=0.1.2",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langchain-postgres>=0.0.14",
    "langgraph>=0.4.1",
    "openai>=1.76.2",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pymongo[aws,encryption,snappy,zstd]>=4.12.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
